forgot password added

--- a/flaskjob/templates/index1.html
+++ b/flaskjob/templates/index1.html
@@ -25,7 +25,7 @@
                
             </div>
         </form>
-        <p>Forgot your password? <a href="forgot_password.html">Reset Password</a></p>
+        <p>Forgot your password? <a href="{{ url_for('forgot') }}">Reset Password</a></p>
         <p>Don't have an account? <a href="{{ url_for('register') }}">Signup</a></p>
     </div>
 </body>
