--- a/flaskjob/templates/educationdetails.html
+++ b/flaskjob/templates/educationdetails.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education_detail</title>
     <link rel="stylesheet" href="education.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="main">
@@ -61,7 +62,7 @@
         function validateForm() {
             var form = document.getElementById("educationForm");
             if (form.checkValidity()) {
-                window.location.href = "experience.html";
+                window.location.href ="{{ url_for('experience') }}";
             } else {
                 alert("Please fill out all required fields.");
             }
