--- a/trial1/templates/auth/index1.html
+++ b/trial1/templates/auth/index1.html
@@ -1,9 +1,4 @@
-{% extends "base.html" %}
 
-{% block title %}Job Portal Login{% endblock %}
-
-{% block content %}
-<div class="login-page">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,10 +10,7 @@
 <body>
     <div class="container">
         <h1>Login</h1>
-        {% if error %}
-        <div class="error">{{ error }}</div>
-        {% endif %}
-        <form action="{{ url_for('user.login') }}" method="post">
+        <form action="login_process.php" method="post">
             <div class="form-group">
                 <label for="email">Email:</label><br>
                 <input type="email" id="email" name="email" required>
@@ -33,10 +25,7 @@
                 <input type="submit" value="Login">
             </div>
         </form>
-        <p>Forgot your password? <a href="{{ url_for('user.forgot_password') }}">Reset Password</a></p>
-        <p>Don't have an account? <a href="{{ url_for('user.register') }}">Signup</a></p>
+        <p>Don't have an account? <a href="{{ url_for('register') }}">Signup</a></p>
     </div>
 </body>
 </html>
-</div>
-{% endblock %}
