--- a/trial2/templates/auth/signin.html
+++ b/trial2/templates/auth/signin.html
@@ -1,33 +1,125 @@
+{% extends "base.html" %}
+
+{% block title %}Job Portal Login{% endblock %}
+
+{% block content %}
+<div class="register-page">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Portal Signin</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Job Portal</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    /* Custom Styles */
+    .form-container {
+      max-width: 400px;
+      margin: auto;
+    }
+  </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h2 class="text-center">Signin</h2>
-        <form action="signin_process.php" method="post">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+  <div class="container">
+    <h2 class="text-center mt-5 mb-4">Registration Form</h2>
+    <div class="form-container">
+      <form action="{{ url_for('user.register') }}" method="POST">
+        <div id="accordion"> <!-- Add id to the parent accordion element -->
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h2 class="mb-0">
+                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Basic Information
+                </button>
+              </h2>
             </div>
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                <div class="form-group input-name">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="fa fa-user"></i></span>
+                    </div>
+                    <input type="text" class="form-control" name="first_name" placeholder="First name*" required>
+                    <input type="text" class="form-control" name="last_name" placeholder="Last name*" required>
+                  </div>
+                </div>
 
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>
+                <div class="form-group input-name">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                    </div>
+                    <input type="email" class="form-control" name="email" placeholder="Email*" required>
+                  </div>
+                </div>
 
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block">Signin</button>
+                <div class="form-group input-name">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="fa fa-calendar"></i></span>
+                    </div>
+                    <input type="date" class="form-control" name="date_of_birth" required>
+                  </div>
+                </div>
+              </div>
             </div>
-        </form>
-        <p class="text-center">Don't have an account? <a href="signup.html">Signup</a></p>
+          </div>
+
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Login Information
+                </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+              <div class="card-body">
+                <div class="form-group input-name">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="fa fa-lock"></i></span>
+                    </div>
+                    <input type="password" class="form-control" name="password" placeholder="Password*" required>
+                    <input type="password" class="form-control" placeholder="Confirm password*" required>
+                  </div>
+                </div>
+                    
+                <div class="form-group input-name">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="terms" required>
+                        <label class="form-check-label" for="terms">I accept the terms and conditions</label>
+                    </div>
+                </div>
+                <!--added new profile pic option and email sms notifications-->
+                <div class="form-group input-name">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="emailNotification">
+                        <label class="form-check-label" for="emailNotification">Email Notification</label>
+                    </div>
+                </div>
+                
+                <div class="form-group input-name">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="smsNotification">
+                        <label class="form-check-label" for="smsNotification">SMS Notification</label>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
-    <!-- Bootstrap JS (optional) -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </div>
+
+  <!-- Bootstrap JS (Optional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-OgwbZS7/BXzYhOCvAUJyLMzIolLxQVaSNz5hniIC3LZhwaihJLj9m0INdV4fEdIl" crossorigin="anonymous"></script>
+
 </body>
 </html>
+</div>
+{% endblock %}
