--- a/trial2/templates/postings/jp.html
+++ b/trial2/templates/postings/jp.html
@@ -3,7 +3,7 @@
 {% block title %}Job Portal Login{% endblock %}
 
 {% block content %}
-<div class="employeralljobspage">
+<div class="postj">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>Job Post Details</h1>
-    {% for post in posts %}
+    
         <div class="post">
             
             <p><strong>Post ID:</strong> {{ post[0] }}</p>
@@ -21,15 +21,10 @@
             <p><strong>Job Description:</strong> {{ post[2] }}</p>
             <p><strong>Company Name:</strong> {{ post[3] }}</p>
             <p><strong>Job Type:</strong> {{ post[4] }}</p>
-            <p><strong>Address:</strong> {{ post[5] }}</p>
-            <p><strong>Skill Set Names:</strong> {{ post[6] }}</p>
-            <form action="/delete_post/{{ post[0] }}" method="post">
-                <button type="submit">Delete</button>
-            </form>
-            <a class="action" href="/update_post/{{ post[0] }}">Edit</a>
-        </div>
-        <hr>
-    {% endfor %}
+            <p><strong>Address:</strong> {{ post[5] }},{{ post[6] }},{{ post[7] }},{{ post[8] }},{{ post[9] }}</p>
+            <p><strong>Skill Set Names:</strong> {{ post[10] }}</p>
+            </div>
+        
 </body>
 </html>
 
