--- a/trial2/templates/seeker/skill.html
+++ b/trial2/templates/seeker/skill.html
@@ -22,6 +22,21 @@
       <option value="{{ skill }}">{{ skill }}</option>
       {% endfor %}
     </select>
+    <div>
+      <label>Skill level:</label>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="skill_level" id="Basic" value="Basic" {% if 'Basic' == request.form.get('skill_level', '') %} checked {% endif %}>
+        <label class="form-check-label" for="Basic">Basic</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="skill_level" id="Medium" value="Medium" {% if 'Medium' == request.form.get('skill_level', '') %} checked {% endif %}>
+        <label class="form-check-label" for="Medium">Medium</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="skill_level" id="Expert" value="Expert" {% if 'Expert' == request.form.get('skill_level', '') %} checked {% endif %}>
+        <label class="form-check-label" for="Expert">Expert</label>
+      </div>
+    </div>
     <button type="submit">Submit</button>
 </form>
 
